@@ -87,23 +87,19 @@ class tx_templavoila_cm2 extends t3lib_SCbase {
 			// Check admin: If this is changed some day to other than admin users we HAVE to check if there is read access to the record being selected!
 		if (!$GLOBALS['BE_USER']->isAdmin())	die('no access.');
 
-			// Draw the header.
-		$this->doc = t3lib_div::makeInstance('noDoc');
-		$this->doc->backPath = $BACK_PATH;
-		$this->doc->docType = 'xhtml_trans';
-
 		$this->returnUrl = tx_templavoila_div::sanitizeLocalUrl(t3lib_div::_GP('returnUrl'));
 
-		$this->content.=$this->doc->startPage($LANG->getLL('title'));
-		$this->content.=$this->doc->header($LANG->getLL('title'));
-		$this->content.=$this->doc->spacer(5);
-
-		if ($this->returnUrl)	{
-			$this->content.='<a href="' . htmlspecialchars($this->returnUrl) . '" class="typo3-goBack">' .
-				'<img' . t3lib_iconWorks::skinImg($this->doc->backPath, 'gfx/goback.gif', 'width="14" height="14"') . ' alt="" />' .
-				$LANG->sL('LLL:EXT:lang/locallang_misc.xml:goBack', 1) .
-				'</a><br/><br/>';
+			// Draw the header.
+		$this->doc = t3lib_div::makeInstance('template');
+		$this->doc->docType = 'xhtml_trans';
+		$this->doc->backPath = $BACK_PATH;
+		if (version_compare(TYPO3_version, '4.3', '>')) {
+			$this->doc->setModuleTemplate('EXT:templavoila/resources/templates/cm2_default.html');
+		} else {
+			$this->doc->setModuleTemplate(t3lib_extMgm::extRelPath('templavoila') . 'resources/templates/cm2_default.html');
 		}
+		$this->doc->bodyTagId = 'typo3-mod-php';
+		$this->doc->divClass = '';
 
 			// XML code:
 		$this->viewTable = t3lib_div::_GP('viewRec');
@@ -210,6 +206,23 @@ class tx_templavoila_cm2 extends t3lib_SCbase {
 
 			// Add spacer:
 		$this->content.=$this->doc->spacer(10);
+
+		$docHeaderButtons = $this->getDocHeaderButtons();
+		$docContent = array(
+			'CSH' => $docHeaderButtons['csh'],
+			'CONTENT' => $this->content
+		);
+
+		$content  = $this->doc->startPage($GLOBALS['LANG']->getLL('title'));
+		$content .= $this->doc->moduleBody(
+			array(),
+			$docHeaderButtons,
+			$docContent
+		);
+		$content .= $this->doc->endPage();
+
+			// Replace content with templated content
+		$this->content = $content;
 	}
 
 	/**
@@ -218,9 +231,48 @@ class tx_templavoila_cm2 extends t3lib_SCbase {
 	 * @return	void
 	 */
 	function printContent()	{
-		$this->content.=$this->doc->middle();
-		$this->content.=$this->doc->endPage();
 		echo $this->content;
+	}
+
+	/**
+	 * Gets the buttons that shall be rendered in the docHeader.
+	 *
+	 * @return	array		Available buttons for the docHeader
+	 */
+	protected function getDocHeaderButtons() {
+		$buttons = array(
+			'csh'		=> t3lib_BEfunc::cshItem('_MOD_web_txtemplavoilaCM1', '', $this->backPath),
+			'back'		=> '',
+			'shortcut'	=> $this->getShortcutButton(),
+		);
+
+			// Back
+		if ($this->returnUrl) {
+			if(version_compare(TYPO3_version,'4.4','>')) {
+				$backIcon = t3lib_iconWorks::getSpriteIcon('actions-view-go-back');
+			} else {
+				$backIcon = '<img' . t3lib_iconWorks::skinImg($this->doc->backPath,'gfx/goback.gif','width="14" height="14"') . ' alt="" />';
+			}
+
+			$buttons['back'] = '<a href="' . htmlspecialchars(t3lib_div::linkThisUrl($this->returnUrl)) . '" class="typo3-goBack" title="' . $GLOBALS['LANG']->sL('LLL:EXT:lang/locallang_core.php:labels.goBack', TRUE) . '">' .
+								$backIcon .
+							   '</a>';
+		}
+		return $buttons;
+	}
+
+	/**
+	 * Gets the button to set a new shortcut in the backend (if current user is allowed to).
+	 *
+	 * @return	string		HTML representiation of the shortcut button
+	 */
+	protected function getShortcutButton() {
+		$result = '';
+		if ($GLOBALS['BE_USER']->mayMakeShortcut()) {
+			$result = $this->doc->makeShortcutIcon('id', implode(',', array_keys($this->MOD_MENU)), $this->MCONF['name']);
+		}
+
+		return $result;
 	}
 
 	/**
